# VinChatbot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Caddyfile  DESIGN.md  Dockerfile  FUTURE_IMPROVEMENTS.md  PLAN22.6.md  PLAN23.6.01.md  PORTFIX.md  PRD.md  PROJECT_JOURNAL.md  README.md  ROUTES.md  UPDATE_PLAN.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  todo.md  worklog.md
LOGS/: ADAPTIVE_ORCHESTRATION_ROADMAP.md  INGEST_FILTER_AUDIT.md  LIVE_FEEDBACK_TRACKER.md  OUTPUT_GUARDRAILS_AUDITOR_PLAN.md  PHASE1.0_LOG.md  PHASE1.13_LOG.md  PHASE1.19_LOG.md  PHASE1.20_LOG.md  PHASE1.21_LOG.md  PHASE1.23_LOG.md  PHASE1.24_LOG.md  PHASE1.24_PLAN.md  PHASE1.28_LOG.md  PHASE1.2_LOG.md  PHASE1.30_LOG.md  PHASE1.33_LOG.md  PHASE1.4_LOG.md  PHASE1.5_LOG.md  PHASE1.6_LOG.md  PHASE1.7_LOG.md  SESSION_CLOSEOUT.md
data/: forms_catalog.json
docs/: ARCHITECTURE.md  BRIEF.md  CODE_REVIEW.md  DELIVERABLES.md  DEPLOY.md  GUIDELINE.md  IMPLEMENTATION_PLAN.md  PLAN21.6.md  PLAN22.6.2.md  PRD.md  PROJECT_JOURNAL.md  UPDATE_PLAN.md  data-model-inconsistency.md  phase-10e-admin-dashboard.md  phase-10f-final-polish.md  phase-11a-notification-actions.md  phase-11b-admin-notifications.md  phase-11c-smart-suggestions.md  phase-11d-notification-ux-audit.md  phase-12a-forum-foundation.md  phase-12b-forum-write-moderation.md  phase-12c-forum-ux-intelligence.md  phase-14a-vinnie-personalization-context.md  phase-5-personalization-tools.md  phase-5b-ticket-suggestion.md  phase-5c-followup-suggestions.md  phase-5d-personalization-correctness.md  phase-5e-security-hardening.md  phase-5f-personalization-polish.md  phase-5g-new-db-migration.md  phase-5h-form-assistant.md  phase-5i-schedule-tiet-fix.md  phase-5j-vn-teencode-robustness.md  pre-personalization-risk-register.md  worklog.md
frontend/: .gitignore  Dockerfile  README.md  account.md  next.config.js  package-lock.json  package.json
migrations/: 000001_schema_migrations.sql  000002_initial_app_schema.sql  000003_seed_base_reference_data.sql  000004_forum_schema.sql  000005_admin_notification_workflow.sql  000006_seed_forum_demo_data.sql  000007_academic_demo_database_core.sql  000008_academic_demo_schedule_density.sql  000009_bilingual_notifications_suggestions.sql  000010_canonical_academic_single_source.sql  000011_course_localized_names.sql
scripts/: build_core_seeds.py  build_policy_topic_index.py  build_structured_index.py  check_student_pages_against_neon.py  crawl_seed.py  db_migrate.py  db_reset.py  db_status.py  eval_rag.py  ingest_documents.py  run_eval.py  run_eval_personal.py  run_vn_robustness.py  seed_demo_data.py
tests/: test_academic_api.py  test_academic_repository.py  test_academic_service.py  test_admin_dashboard_api.py  test_admin_notifications_api.py  test_agent_graph.py  test_asset_metadata.py  test_auth_api.py  test_cache.py  test_calendar_parser_hardening.py  test_chat_persistence.py  test_chat_personalization.py  test_chat_route.py  test_chunker.py  test_context.py  test_conversation_api.py  test_crawler_metadata.py  test_data_cleaning.py  test_db_health.py  test_db_migrations.py  test_determinism.py  test_eval_diff.py  test_eval_ledger.py  test_form_fill.py  (+35 more)
(+323 files in other folders)
