[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinchatbot"
version = "0.1.0"
description = "Production MVP RAG + ReAct chatbot scaffold for VinUni student support."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "fastembed>=0.4.0",
    "httpx>=0.27.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.11.0",
    "trafilatura>=1.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
ocr = [
    "paddleocr>=3.0.0",
    "pillow>=10.0.0",
]
tables = [
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.setuptools.packages.find]
include = ["vinchatbot*"]
exclude = ["data*", "tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
